--- a/index.html
+++ b/index.html
@@ -1,133 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Probably Weather</title>
-  <link rel="stylesheet" href="assets/app.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2? family=Montserrat:wght@400;600;700&family=Poppins:wght@800;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/app.css">
 </head>
-
 <body>
-  <!-- Background system (must be first, behind everything) -->
-  <div id="bg" aria-hidden="true">
-    <img id="bgImg" src="" alt="" />
+
+  <!-- Background -->
+  <div id="bg">
+    <img id="bgImg" src="" alt="">
     <div id="scrim"></div>
   </div>
 
-  <div class="container">
-    <header class="topbar">
-      <div class="topbar-left">
-        <div class="mark" aria-hidden="true">◉</div>
-        <div class="topbar-title">Probably Weather</div>
-      </div>
+  <!-- App Container -->
+  <div class="app">
 
-      <div class="topbar-mid">
-        <div class="topbar-location" id="cityLine">—</div>
-        <div class="topbar-sub" id="subhead">No more Ja-No-Maybe weather. Just Probably.</div>
+    <!-- Header -->
+    <header class="header">
+      <div class="header-left">
+        <span class="logo">◉</span>
+        <div class="brand">
+          <div class="brand-name">Probably Weather</div>
+          <div class="brand-tagline">No more Ja-No-Maybe weather.  Just Probably.</div>
+        </div>
       </div>
-
-      <div class="topbar-right">
-        <div class="mini" id="updatedAt">—</div>
+      <div class="header-right">
+        <div class="location" id="location">—</div>
+        <div class="updated" id="updated">—</div>
       </div>
     </header>
 
+    <!-- Main Content -->
     <main class="main">
-      <!-- HOME -->
-      <section class="screen screen--home" id="screen-home">
-        <div class="home-grid">
-          <section class="hero">
-            <div class="hero-kicker" id="confidenceTop">PROBABLY · — CONFIDENCE</div>
 
-            <div class="hero-title" id="conditionText">This is —.</div>
+      <!-- Home Screen -->
+      <section class="screen" id="screen-home">
+        <div class="home-layout">
 
-            <div class="hero-temp" id="bigTemp">—</div>
+          <!-- Left:  Hero -->
+          <div class="hero">
+            <div class="confidence-line" id="confidenceLine">PROBABLY · — CONFIDENCE</div>
+            <h1 class="headline" id="headline">This is —. </h1>
+            <div class="temp-range" id="tempRange">—</div>
+            <div class="witty" id="witty">—</div>
+          </div>
 
-            <div class="hero-witty" id="wittyLine">—</div>
-          </section>
-
+          <!-- Right: Cards -->
           <aside class="cards">
             <div class="card">
-              <div class="card-kicker" id="todayExtremeKicker">Today's extreme:</div>
-              <div class="card-title" id="todayExtremeTitle">—</div>
-              <div class="card-big" id="todayExtremeRange">—</div>
+              <div class="card-label">Today's extreme: </div>
+              <div class="card-title" id="extremeTitle">—</div>
+              <div class="card-value" id="extremeValue">—</div>
             </div>
 
             <div class="card">
-              <div class="card-kicker">Rain:</div>
-              <div class="card-title" id="rainSummary">—</div>
+              <div class="card-label">Rain: </div>
+              <div class="card-value" id="rainValue">—</div>
             </div>
 
             <div class="card">
-              <div class="card-kicker">UV</div>
-              <div class="card-title" id="uvSummary">—</div>
+              <div class="card-label">UV: </div>
+              <div class="card-value" id="uvValue">—</div>
             </div>
 
-            <div class="card card--confidence">
-              <div class="card-kicker">Confidence:</div>
+            <div class="card">
+              <div class="card-label">Confidence:</div>
               <div class="card-title" id="confidenceTitle">—</div>
               <div class="card-sub" id="confidenceSub">—</div>
             </div>
           </aside>
+
         </div>
       </section>
 
-      <!-- HOURLY -->
-      <section class="screen" id="screen-hourly" hidden>
-        <div class="screen-title">Hourly</div>
-        <div class="screen-body" id="hourlyList"></div>
+      <!-- Hourly Screen -->
+      <section class="screen hidden" id="screen-hourly">
+        <h2 class="screen-title">Hourly</h2>
+        <div class="list" id="hourlyList"></div>
       </section>
 
-      <!-- WEEK -->
-      <section class="screen" id="screen-week" hidden>
-        <div class="screen-title">Week</div>
-        <div class="screen-body" id="weekList"></div>
+      <!-- Week Screen -->
+      <section class="screen hidden" id="screen-week">
+        <h2 class="screen-title">Week</h2>
+        <div class="list" id="weekList"></div>
       </section>
 
-      <!-- SEARCH -->
-      <section class="screen" id="screen-search" hidden>
-        <div class="screen-title">Search</div>
-        <div class="screen-body">
-          <div class="search-wrap">
-            <input id="searchInput" class="search-input" placeholder="Search a city..." />
-            <button id="searchBtn" class="search-btn">Search</button>
-          </div>
-          <div class="mini" id="searchHint">Tip: Try “Cape Town”, “New York”, “London”.</div>
+      <!-- Search Screen -->
+      <section class="screen hidden" id="screen-search">
+        <h2 class="screen-title">Search</h2>
+        <div class="search-box">
+          <input type="text" id="searchInput" class="search-input" placeholder="Search a city...">
+          <button id="searchBtn" class="search-btn">Search</button>
+        </div>
+        <div class="search-hint">Try "Cape Town", "Johannesburg", "Durban"</div>
+      </section>
+
+      <!-- Settings Screen -->
+      <section class="screen hidden" id="screen-settings">
+        <h2 class="screen-title">Settings</h2>
+        <div class="settings-row">
+          <div class="settings-label">Sources used:</div>
+          <div class="settings-value" id="sourcesList">—</div>
+        </div>
+        <div class="settings-row">
+          <div class="settings-label">Units:</div>
+          <div class="settings-value">°C, km/h</div>
         </div>
       </section>
 
-      <!-- SETTINGS -->
-      <section class="screen" id="screen-settings" hidden>
-        <div class="screen-title">Settings</div>
-        <div class="screen-body">
-          <div class="setting-row">
-            <div>
-              <div class="setting-title">Units</div>
-              <div class="setting-sub">Currently fixed to °C and km/h.</div>
-            </div>
-            <div class="mini">v1</div>
-          </div>
-
-          <div class="setting-row">
-            <div>
-              <div class="setting-title">Sources</div>
-              <div class="setting-sub" id="sourcesList">—</div>
-            </div>
-          </div>
-        </div>
-      </section>
     </main>
 
-    <nav class="bottom-nav" aria-label="Primary">
-      <button class="nav-btn is-active" data-target="home">Home</button>
-      <button class="nav-btn" data-target="hourly">Hourly</button>
-      <button class="nav-btn" data-target="week">Week</button>
-      <button class="nav-btn" data-target="search">Search</button>
-      <button class="nav-btn" data-target="settings">Settings</button>
+    <!-- Bottom Navigation -->
+    <nav class="nav">
+      <button class="nav-btn active" data-screen="home">Home</button>
+      <button class="nav-btn" data-screen="hourly">Hourly</button>
+      <button class="nav-btn" data-screen="week">Week</button>
+      <button class="nav-btn" data-screen="search">Search</button>
+      <button class="nav-btn" data-screen="settings">Settings</button>
     </nav>
+
   </div>
 
-  <!-- IMPORTANT: config loads BEFORE app.js -->
   <script src="assets/config.js"></script>
-  <script src="assets/app.js"></script>
+  <script src="assets/app. js"></script>
 </body>
 </html>
