refresh button fuckup

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 
       <div class="tagline">No more Ja-No-Maybe weather. Just Probably.</div>
 
+      <div class="header-right">
+        <span id="updatedAt">Updated —</span>
+        <button id="refreshBtn" class="refresh-icon">↻</button>
+      </div>
+
     </header>
 
     <main id="home-screen" class="main">
