--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         </div>
       </div>
       <div class="screen-panel-footer">
+        <button id="clearRecents" class="clear-recents">Clear recents</button>
         <button id="manageFavorites" class="manage-btn">Manage favourites</button>
       </div>
     </section>
