Add language selection options in settings

--- a/index.html
+++ b/index.html
@@ -142,6 +142,20 @@
         </div>
         
         <div class="settings-section">
+          <h3>Language</h3>
+          <div class="settings-option">
+            <label for="languageSelect">Witty lines in</label>
+            <select id="languageSelect">
+              <option value="en">English</option>
+              <option value="af">Afrikaans</option>
+              <option value="zu">isiZulu</option>
+              <option value="xh">isiXhosa</option>
+              <option value="st">Sesotho</option>
+            </select>
+          </div>
+        </div>
+        
+        <div class="settings-section">
           <h3>About</h3>
           <p>Probably Weather combines forecasts from Open-Meteo, WeatherAPI.com & MET Norway to give you a more reliable prediction.</p>
           <p style="margin-top:8px;opacity:0.6;">Version 1.1</p>
